Fix layout issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,34 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.messages-layout {
+  display: flex;
+  width: 100%;
+  height: calc(100vh - 58px);
+  margin-top: 58px;
+}
+
+.left-sidebar {
+  width: 300px;
+  height: 100%;
+  border-right: 1px solid rgb(229, 231, 235);
+}
+
+.content {
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-width: 767px) {
+  .left-sidebar {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .content {
+    width: calc(100% - 300px);
+    height: 100%;
+  }
+}
